--- a/api/templates/booking_dashboard.html
+++ b/api/templates/booking_dashboard.html
@@ -8,72 +8,75 @@
 
 
 <div class="container back_color">
-    <div class="col-md-12 mb-5">
-        <div class="card">
-            <div class="card-header">
-                Booking Dashboard
-            </div>
-            <div class="card-body">
-                <div class="row justify-content-end">
-                    <div class="col-md-5 d-flex custom-btn-group">
-                        <!-- <button class="btn btn-success mb-2">Cash Booking</button> -->
-                        <a href="{% url 'cash_booking' %}" class="text-decoration-none btn btn-success mb-2"><b>Cash Booking</b></a>
-                        <!-- <button class="btn btn-primary mb-2">Party Booking</button> -->
-                        <a href="{% url 'bookings' %}" class="text-decoration-none btn btn-secondary mb-2"><b>Fast Booking</b></a>
-                    </div>
+    <div class="row">
+        <div class="col-md-12 mb-5">
+            <div class="card mt-2">
+                <div class="card-header">
+                    Booking Dashboard
                 </div>
-                <div class="col-12">
-                    <div class="scrollme">
-                        <table class="table table-striped table-responsive" id="table-1">
-                            <tbody>
-                                <tr>
-                                    <th>Action</th>
-                                    <th>Doc No.</th>
-                                    <th>Date</th>
-                                    <th>To Center</th>
-                                    <th>Product</th>
-                                    <th>Sender name</th>
-                                    <th>Receiver name</th>
-                                    <th>Weight</th>
-                                    <th>Frieght</th>
-                                    <th>Total Amount</th>
-
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <button type='button' id='edit_button' class='border-0 bg-transparent text-primary editButton' data-sid="{{ drs.drs_no }}" title="Edit DRS"><i class="bi bi-pencil"></i></button>
-                                        <!-- <button type='button' id='delete_button' class='border-0 bg-transparent text-primary deleteButton' data-sid="{{ drs.id }}" title="Delete DRS" data-toggle="modal" data-target="#deleteModal"><i class="bi bi-trash3"></i></button> -->
-                                        <button type='button' id='print_button' class='border-0 bg-transparent text-primary printButton' data-sid="{{ drs.drs_no }}" title="Print DRS"><i class="bi bi-printer"></i></button>
-                                    </td>
-                                    <td>123</td>
-                                    <td>2023-07-07</td>
-                                </tr>
-                            </tbody>
-                        </table>
+                <div class="card-body">
+                    <div class="row justify-content-end text-end">
+                        <div class="col-md-5">
+                            <!-- <button class="btn btn-success mb-2">Cash Booking</button> -->
+                            <a href="{% url 'cash_booking' %}" class="text-decoration-none btn btn-success mb-2"><b>Cash Booking</b></a>
+                            <!-- <button class="btn btn-primary mb-2">Party Booking</button> -->
+                            <a href="{% url 'bookings' %}" class="text-decoration-none btn btn-primary mb-2"><b>Fast Booking</b></a>
+                        </div>
                     </div>
+                    <div class="col-12">
+                        <div class="scrollme">
+                            <table class="table table-striped table-responsive" id="table-1">
+                                <tbody>
+                                    <tr>
+                                        <th>Action</th>
+                                        <th>Doc No.</th>
+                                        <th>Date</th>
+                                        <th>To Center</th>
+                                        <th>Product</th>
+                                        <th>Sender name</th>
+                                        <th>Receiver name</th>
+                                        <th>Weight</th>
+                                        <th>Frieght</th>
+                                        <th>Total Amount</th>
+
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <button type='button' id='edit_button' class='border-0 bg-transparent text-primary editButton' data-sid="{{ drs.drs_no }}" title="Edit DRS"><i class="bi bi-pencil"></i></button>
+                                            <!-- <button type='button' id='delete_button' class='border-0 bg-transparent text-primary deleteButton' data-sid="{{ drs.id }}" title="Delete DRS" data-toggle="modal" data-target="#deleteModal"><i class="bi bi-trash3"></i></button> -->
+                                            <button type='button' id='print_button' class='border-0 bg-transparent text-primary printButton' data-sid="{{ drs.drs_no }}" title="Print DRS"><i class="bi bi-printer"></i></button>
+                                        </td>
+                                        <td>123</td>
+                                        <td>2023-07-07</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <!-- This section contain today's generated DRS details -->
+            {% csrf_token %}
+            <div class="row mt-3 justify-content-lg-center">
+                <h5 class="text-center alert alert-light text-black">Filter in booked shipments</h5>
+                <div class="col-md-3">
+                    <label for="search_drs_num"><b>C Note Number</b></label>
+                    <input type="text" name="search_drs_num" id="search_drs_num" class="form-control">
+                </div>
+
+                <div class="col-md-3">
+                    <label for="search_date"><b>Date</b></label>
+                    <input type="date" name="search_date" id="search_date" class="form-control">
+                </div>
+                <div class="col-md-2 mb-5">
+                    <input type="button" id="search_by_date_btn" value="Search" class="mt-4 btn btn-success">
                 </div>
 
             </div>
-        </div>
-        <!-- This section contain today's generated DRS details -->
-        {% csrf_token %}
-        <div class="row mt-3 justify-content-lg-center">
-            <h5 class="text-center alert alert-light text-black">Filter in booked shipments</h5>
-            <div class="col-md-3">
-                <label for="search_drs_num"><b>C Note Number</b></label>
-                <input type="text" name="search_drs_num" id="search_drs_num" class="form-control">
-            </div>
-
-            <div class="col-md-3">
-                <label for="search_date"><b>Date</b></label>
-                <input type="date" name="search_date" id="search_date" class="form-control">
-            </div>
-            <div class="col-md-2 mb-5">
-                <input type="button" id="search_by_date_btn" value="Search" class="mt-4 btn btn-success">
-            </div>
-
         </div>
     </div>
+
 </div>
 
 {% endblock content %}
