--- a/api/templates/booking_dashboard.html
+++ b/api/templates/booking_dashboard.html
@@ -4,6 +4,20 @@
         display: flex;
         gap: 10px;
     }
+    
+    .table-responsive-hori {
+        overflow-x: auto;
+    }
+    
+    .table-responsive-hori table {
+        width: auto;
+        min-width: 100%;
+    }
+    
+    .table-responsive-hori table th,
+    .table-responsive-hori table td {
+        white-space: nowrap;
+    }
 </style>
 
 
@@ -35,9 +49,9 @@
                         </div>
                     </div>
                     <div class="col-12">
-                        <div class="scrollme">
-                            <table class="table table-striped table-responsive" id="table-1">
-                                <tbody>
+                        <div class="scrollme table-responsive table-responsive-hori">
+                            <table class="table table-striped" id="table-1">
+                                <thead>
                                     <tr>
                                         <th>Action</th>
                                         <th>Doc No.</th>
@@ -49,17 +63,29 @@
                                         <th>Weight</th>
                                         <th>Frieght</th>
                                         <th>Total Amount</th>
-
+                                        <th>Ref courier</th>
                                     </tr>
+                                </thead>
+                                <tbody>
+                                    {% for booking in todays_booking %}
                                     <tr>
                                         <td>
-                                            <button type='button' id='edit_button' class='border-0 bg-transparent text-primary editButton' data-sid="{{ drs.drs_no }}" title="Edit DRS"><i class="bi bi-pencil"></i></button>
+                                            <a href="{% url 'edit_cash_booking' booking.id %}" class="text-decoration-none border-0 bg-transparent text-primary editButton"><i class="bi bi-pencil"></i></a>
                                             <!-- <button type='button' id='delete_button' class='border-0 bg-transparent text-primary deleteButton' data-sid="{{ drs.id }}" title="Delete DRS" data-toggle="modal" data-target="#deleteModal"><i class="bi bi-trash3"></i></button> -->
-                                            <button type='button' id='print_button' class='border-0 bg-transparent text-primary printButton' data-sid="{{ drs.drs_no }}" title="Print DRS"><i class="bi bi-printer"></i></button>
+                                            <button type='button' id='print_button' class='border-0 bg-transparent text-primary printButton' data-sid="{{ booking.id }}" title="Print DRS"><i class="bi bi-printer"></i></button>
                                         </td>
-                                        <td>123</td>
-                                        <td>2023-07-07</td>
+                                        <td>{{ booking.c_note_number }}</td>
+                                        <td>{{ booking.doc_date|date:"d-b-Y" }} </td>
+                                        <td>{{ booking.to_destination }}</td>
+                                        <td>{{ booking.booking_type }}</td>
+                                        <td>{{ booking.sender_name }}</td>
+                                        <td>{{ booking.receiver_name }}</td>
+                                        <td>{{ booking.weight }}</td>
+                                        <td>{{ booking.freight_charge }}</td>
+                                        <td>{{ booking.amount }}</td>
+                                        <td>{{ booking.ref_courier_name }}</td>
                                     </tr>
+                                    {% endfor %}
                                 </tbody>
                             </table>
                         </div>
