--- a/api/templates/tracking.html
+++ b/api/templates/tracking.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %} {% load static %} {% block title %}Tracking{% endblock title %} {% block content %}
-
-<div class="container">
+<div class="container mt-5">
     <div class="row mt-4">
-        <div class="col-12">
+        <div class="col-12 mt-4">
             <h4 class="text-center"></h4>
             <div class="table-responsive">
                 <table class="table table-striped">
