--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -184,7 +184,6 @@
             csrfmiddlewaretoken: token,
             tracking_num: tracking_num
         }
-        console.log(tracking_num);
         $.ajax({
             url: "{% url 'check_tracking_num' %}",
             method: "POST",
@@ -194,7 +193,7 @@
                 if (response.status == 1) {
                     console.log("success");
                     new_url = "tracking/" + tracking_num
-                    window.open(new_url, "_blank")
+                    window.location.assign(new_url);
                 } else {
                     alert(response.message);
                     $("#trackingdetails").focus();
