--- a/api/templates/booking_dashboard.html
+++ b/api/templates/booking_dashboard.html
@@ -72,7 +72,9 @@
                                         <td>
                                             <a href="{% url 'edit_cash_booking' booking.id %}" class="text-decoration-none border-0 bg-transparent text-primary editButton"><i class="bi bi-pencil"></i></a>
                                             <!-- <button type='button' id='delete_button' class='border-0 bg-transparent text-primary deleteButton' data-sid="{{ drs.id }}" title="Delete DRS" data-toggle="modal" data-target="#deleteModal"><i class="bi bi-trash3"></i></button> -->
-                                            <button type='button' id='print_button' class='border-0 bg-transparent text-primary printButton' data-sid="{{ booking.id }}" title="Print DRS"><i class="bi bi-printer"></i></button>
+
+                                            <a href="{% url 'print_cash_booking' booking.id %}" target="_blank" class="text-decoration-none border-0 bg-transparent text-primary printButton" style="padding-left: 10px;"><i class="bi bi-printer"></i></a>
+                                            <!-- <button type='button' id='print_button' class='border-0 bg-transparent text-primary printButton' data-sid="{{ booking.id }}" title="Print DRS"><i class="bi bi-printer"></i></button> -->
                                         </td>
                                         <td>{{ booking.c_note_number }}</td>
                                         <td>{{ booking.doc_date|date:"d-b-Y" }} </td>
@@ -115,5 +117,6 @@
     </div>
 
 </div>
+
 
 {% endblock content %}
