--- a/api/templates/print_cash_booking.html
+++ b/api/templates/print_cash_booking.html
@@ -66,7 +66,7 @@
             <tr>
                 <td style="height: 1px; font-size: 10px; border: 0px;"><b>Ship To,</b></td>
                 <td colspan="4" style="font-size: 12px; border: 0px;">{{ bd.receiver_name }}</td>
-                <td colspan="3" rowspan="3" style="border-right: 0px; border-top: 0px; border-bottom: 1px soild black;"></td>
+                <td colspan="3" rowspan="3" style="border-right: 0px; border-top: 0px; border-bottom: 1px soild black;">{{ barcode | safe}}</td>
                 <!-- To setup barcode image -->
             </tr>
             <tr>
@@ -151,7 +151,7 @@
                 <td colspan="5" style="font-size: 11px; border: 0;"><b>Terms & Conditions*</b></td>
                 <td colspan="3" style="border: 1px solid black; border-bottom: 0px; border-right: 0px; text-align: center;" rowspan="3">
                     <div id="qrcode">
-
+                        {{ qr_code | safe}}
                     </div>
                 </td>
                 <!-- Need to setup QR Code -->
