--- a/api/templates/manifest_print.html
+++ b/api/templates/manifest_print.html
@@ -53,9 +53,9 @@
                     <thead>
                         <tr>
                             <th scope="col">No.</th>
-                            <th scope="col">C/N No.</th>
+                            <th scope="col">C. Note No.</th>
                             <th scope="col">Station</th>
-                            <th scope="col">Copies</th>
+                            <th scope="col">Pcs.</th>
                             <th scope="col">Weight (gms.)</th>
                         </tr>
                     </thead>
